syntax = "proto3";

package message;

message InstructionPacket {
    bytes packet = 1;
}

message TimeoutError {}

message StatusPacket {
    oneof response {
        bytes packet = 1;
        TimeoutError error = 2;
    }
}

service MessageService {
    rpc Send(stream InstructionPacket) returns (stream StatusPacket);
}